objects/Band_solution__c.object
<CustomObject>
    <fields>
        <fullName>Genre__c</fullName>
        <description>The type of music the band plays.</description>
        <label>Genre</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rock</fullName>
                </value>
                <value>
                    <fullName>Indie</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>Bossanova</fullName>
                </value>
                <value>
                    <fullName>Samba</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_piano__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has piano</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headliner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Headliner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Phone__c</fullName>
        <label>Manager Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Special_Requests__c</fullName>
        <description>Any special requests the band might have.</description>
        <label>Special Requests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Band (solution)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Band (solution) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bands (solution)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>